--- a/FamilyLoader/Views/MainWindowResources.xaml
+++ b/FamilyLoader/Views/MainWindowResources.xaml
@@ -33,6 +33,10 @@
         <Setter Property="Width" Value="100"/>
     </Style>
 
+    <Style x:Key="ColStyleButton" TargetType="{x:Type ColumnDefinition}">
+        <Setter Property="Width" Value="70"/>
+    </Style>
+
     <Style x:Key="ColStyleFlex" TargetType="{x:Type ColumnDefinition}">
         <!--<Setter Property="MinWidth" Value="100"/>-->
     </Style>
@@ -94,7 +98,7 @@
 
     <!--Button Style-->
     <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
-        <Setter Property="Margin" Value="10"/>
+        <Setter Property="Margin" Value="0,10,10,10"/>
     </Style>
 
     <Style x:Key="ButtonStyleRight" TargetType="{x:Type Button}">
