--- a/FamilyLoader/Views/Controls/Close.xaml
+++ b/FamilyLoader/Views/Controls/Close.xaml
@@ -11,8 +11,10 @@
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <Path Fill="#FFA9A9A9">
+            <Canvas.Resources>
+                <ResourceDictionary Source="ControlsResources.xaml"/>
+            </Canvas.Resources>
+            <Path Style="{DynamicResource MouseOverStyleStop}">
                 <Path.Data>
                     <PathGeometry Figures="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" FillRule="NonZero"/>
                 </Path.Data>
