--- a/FamilyLoader/Views/Controls/Browse.xaml
+++ b/FamilyLoader/Views/Controls/Browse.xaml
@@ -11,8 +11,10 @@
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <Path Fill="#FFA9A9A9">
+            <Canvas.Resources>
+                <ResourceDictionary Source="ControlsResources.xaml"/>
+            </Canvas.Resources>
+            <Path Style="{DynamicResource MouseOverStyle}">
                 <Path.Data>
                     <PathGeometry Figures="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z" FillRule="NonZero"/>
                 </Path.Data>
