--- a/FamilyLoader/Views/Controls/Place.xaml
+++ b/FamilyLoader/Views/Controls/Place.xaml
@@ -11,13 +11,14 @@
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0"/>
             </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <Path Fill="#FFA9A9A9">
+            <Canvas.Resources>
+                <ResourceDictionary Source="ControlsResources.xaml"/>
+            </Canvas.Resources>
+            <Path Style="{DynamicResource MouseOverStyle}">
                 <Path.Data>
                     <PathGeometry Figures="M24 4c-7.73 0-14 6.27-14 14 0 10.5 14 26 14 26s14-15.5 14-26c0-7.73-6.27-14-14-14zm0 19c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z" FillRule="NonZero"/>
                 </Path.Data>
             </Path>
         </Canvas>
     </Viewbox>
-
 </UserControl>
