--- a/FamilyLoader/Views/MainWindowResources.xaml
+++ b/FamilyLoader/Views/MainWindowResources.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:local="clr-namespace:Gensler.Revit.FamilyLoader.Views">
+                    xmlns:local="clr-namespace:Gensler.Revit.FamilyLoader.Views"
+                    xmlns:controls="clr-namespace:Gensler.Revit.FamilyLoader.Views.Controls">
     <!--Grid Styles-->
     <Style x:Key="GridStyle" TargetType="{x:Type Grid}">
         <Setter Property="ShowGridLines" Value="False"/>
