--- a/FamilyLoader/Views/Controls/Place.xaml
+++ b/FamilyLoader/Views/Controls/Place.xaml
@@ -1,22 +1,24 @@
-﻿<UserControl x:Class="Gensler.Revit.FamilyLoader.Views.Controls.Place"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Gensler.Revit.FamilyLoader.Views.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="48" d:DesignWidth="48">
+﻿<UserControl
+    x:Class="Gensler.Revit.FamilyLoader.Views.Controls.Place"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Gensler.Revit.FamilyLoader.Views.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="48"
+    d:DesignWidth="48"
+    mc:Ignorable="d">
     <Viewbox Stretch="Uniform">
         <Canvas Width="48" Height="48">
             <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
+                <TranslateTransform X="0" Y="0" />
             </Canvas.RenderTransform>
             <Canvas.Resources>
-                <ResourceDictionary Source="ControlsResources.xaml"/>
+                <ResourceDictionary Source="ControlsResources.xaml" />
             </Canvas.Resources>
             <Path Style="{DynamicResource MouseOverStyle}">
                 <Path.Data>
-                    <PathGeometry Figures="M24 4c-7.73 0-14 6.27-14 14 0 10.5 14 26 14 26s14-15.5 14-26c0-7.73-6.27-14-14-14zm0 19c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z" FillRule="NonZero"/>
+                    <PathGeometry Figures="M24 4c-7.73 0-14 6.27-14 14 0 10.5 14 26 14 26s14-15.5 14-26c0-7.73-6.27-14-14-14zm0 19c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z" FillRule="NonZero" />
                 </Path.Data>
             </Path>
         </Canvas>
